syntax = "proto3";

package acmelib.v1;

import "google/protobuf/timestamp.proto";

enum EntityKind {
    ENTITY_KIND_UNSPECIFIED = 0;
    ENTITY_KIND_NETWORK = 1;
    ENTITY_KIND_BUS = 2;
    ENTITY_KIND_NODE = 3;
    ENTITY_KIND_MESSAGE = 4;
    ENTITY_KIND_SIGNAL = 5;
    ENTITY_KIND_SIGNAL_TYPE = 6;
    ENTITY_KIND_SIGNAL_UNIT = 7;
    ENTITY_KIND_SIGNAL_ENUM = 8;
    ENTITY_KIND_SIGNAL_ENUM_VALUE = 9;
    ENTITY_KIND_ATTRIBUTE = 10;
    ENTITY_KIND_CANID_BUILDER = 11;
}

message Entity {
    string entity_id = 1;
    EntityKind entity_kind = 2;
    string name = 3;
    string desc = 4;
    google.protobuf.Timestamp create_time = 5;
}