syntax = "proto3";

package acmelib.v1;

import "acmelib/v1/entity.proto";
import "acmelib/v1/message.proto";
import "acmelib/v1/node.proto";

message NodeInterface {
    acmelib.v1.Entity entity = 1;

    repeated acmelib.v1.Message messages = 2;

    int32 number = 3;

    oneof node {
        acmelib.v1.Node embedded_node = 4;
        string node_entity_id = 5;
    }
}